fix to jumpy buttons

--- a/server/public/sass/bulma/sass/elements/button.sass
+++ b/server/public/sass/bulma/sass/elements/button.sass
@@ -21,9 +21,8 @@
 
 .button
   @extend .unselectable
-  +box-shadow(3px,3px,5px,$border,0)
+  +box-shadow(0,3px,5px,$border,0)
   +control
-  +transition(all 0.25s ease)
   justify-content: center
   text-align: center
   white-space: nowrap
@@ -44,9 +43,11 @@
     & + span
       margin-left: 2px
       margin-right: -2px
+  &:active
+    +box-shadow(0,5px,20px,$border,0)
   &:hover,
   &:focus
-    +box-shadows(0 4px 5px 0 rgba(0,0,0,.14),0 1px 5px 0 rgba(0,0,0,.12),0 2px 4px -1px rgba(0,0,0,.2))
+    +box-shadow(0,3px,12px,$border,0)
   &:hover,
   &:focus,
   &.is-active
@@ -56,8 +57,6 @@
     &:focus
       border-color: $black-disabled
       color: $black-secondary
-  &:active
-    +box-shadows(0 5px 8px 0 rgba(0,0,0,.14),0 2px 10px 0 rgba(0,0,0,.12),0 4px 5px -1px rgba(0,0,0,.2))
   // Modifiers
   &.no-shadow
     +box-shadow(0,0,0,$black,0)
@@ -78,7 +77,7 @@
       &:hover,
       &:focus,
       &.is-active
-        background-color: darken($color, 16%)
+        background-color: darken($color, 12%)
         border-color: transparent
         color: $color-invert
       &:active
@@ -89,7 +88,7 @@
         &:hover,
         &:active,
         &:focus
-          background-color: darken($color-invert, 16%)
+          background-color: darken($color-invert, 12%)
       &.is-loading
         &:after
           border-color: transparent transparent $color-invert $color-invert !important
@@ -109,7 +108,7 @@
           &:hover,
           &:active,
           &:focus
-            background-color: darken($color, 16%)
+            background-color: darken($color, 12%)
 
   // Sizes
   &.is-small
